kubernetes/apps/immich/_base/httproute.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames: ["immich.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
